--- a/client/package.json
+++ b/client/package.json
@@ -10,20 +10,27 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "axios": "^1.8.3",
+    "chart.js": "^4.4.8",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.7",
     "next": "15.2.2",
+    "node-binance-api": "^0.13.5",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^22.13.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "tailwindcss": "^4.0.13",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   }
 }
